--- a/CompanyNews/Views/Authorization/AuthorizationPage.xaml
+++ b/CompanyNews/Views/Authorization/AuthorizationPage.xaml
@@ -4,11 +4,103 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CompanyNews.Views.Authorization"
+      xmlns:ViewModel="clr-namespace:CompanyNews.ViewModels.Authorization"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" d:DataContext="{d:DesignInstance Type=ViewModel:AuthorizationViewModel}"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      MinHeight="700" MinWidth="1200"
       Title="AuthorizationPage">
 
-    <Grid>
+    <Page.Resources>
+
+        <!--связываем View и ViewModel-->
+        <ViewModel:AuthorizationViewModel x:Key="AuthorizationViewModel"/>
+
+        <!--анимация подсветки полей-->
+        <Storyboard x:Key="FieldIllumination">
+            <ColorAnimation Storyboard.TargetProperty="Background.(SolidColorBrush.Color)"
+From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
+        </Storyboard>
+
+    </Page.Resources>
+
+    <Grid Background="AliceBlue" DataContext="{StaticResource AuthorizationViewModel}">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0">
+
+            <!--заголовок-->
+            <TextBlock Text="Новости ТРАЙТЭК" FontSize="30" Foreground="Black" FontWeight="Bold" 
+               HorizontalAlignment="Left" Margin="40, 20, 0, 0" VerticalAlignment="Top"/>
+
+            <!--сообщение об ошибке-->
+            <TextBlock Text="{Binding errorInput, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+               x:Name="errorInput" HorizontalAlignment="Right" Height="100" Margin="0, 70, 350, 0" 
+               FontWeight="DemiBold" FontSize="18"/>
+        </Grid>
+
+        <Grid Grid.Row="0" Grid.RowSpan="3" VerticalAlignment="Center" Margin="0,0,0,80">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <!--авторизация или регистрация-->
+            <Grid Grid.Row="0" VerticalAlignment="Center" Width="300"
+                        HorizontalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Text="Авторизация" FontSize="30" Foreground="Black" FontWeight="Bold" 
+   HorizontalAlignment="Center" Margin="0, 0, 0, 0" VerticalAlignment="Top"/>
+            </Grid>
+
+            <StackPanel Grid.Row="1" Orientation="Vertical">
+                <!--пароль и логин-->
+                <TextBox Height="50" Margin="0,30,0,0" x:Name="Login"
+                 VerticalAlignment="Center" HorizontalAlignment="Center"
+                 IsEnabled="{Binding IsUserLogin, Converter={StaticResource InvertBooleanConverter}}"
+                 Text="{Binding Login, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"   
+                 materialDesign:TextFieldAssist.HasClearButton="True"
+                 Style="{StaticResource MaterialDesignOutlinedTextBox}" 
+                 materialDesign:HintAssist.Hint="Логин"
+                 materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
+                 MaxLength="100" TextWrapping="Wrap" Width="300"/>
+
+                <PasswordBox Height="50" Margin="0,10,0,-10" x:Name="Password"
+                 VerticalAlignment="Center" HorizontalAlignment="Center"  
+                 materialDesign:TextFieldAssist.HasClearButton="True"
+                 Style="{StaticResource MaterialDesignOutlinedRevealPasswordBox}" 
+                 materialDesign:HintAssist.Hint="Пароль" 
+                 materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
+                 MaxLength="100" Width="300"/>
+            </StackPanel>
+
+            <!--кнопки-->
+            <Button Grid.Row="2" Content="Вход" Margin="450,30,450,0" Width="300"
+                    Command="{Binding Entrance}" Background="#FF2350AB" BorderBrush="Black" Height="32" VerticalAlignment="Top"/>
+
+        </Grid>
+
+        <Grid Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,10">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <materialDesign:PackIcon Grid.Column="0" Kind="Account" Width="50" Height="50"/>
+            <TextBlock Grid.Column="1" Text="{Binding NumberUsers, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="30" Foreground="Black" FontWeight="Bold" 
+HorizontalAlignment="Center" Margin="10, 0, 50, 0" VerticalAlignment="Center"/>
+        </Grid>
         
     </Grid>
 </Page>
