--- a/CompanyNews/Views/MainWindow.xaml
+++ b/CompanyNews/Views/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="Новости ТРАЙТЭК" MinHeight="700" Height="Auto" MinWidth="1200">
     <Grid>
-        <TextBlock />
+        <Frame x:Name="mainFrame" Content="{Binding mainFrame, Mode=TwoWay}" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
