--- a/CompanyNews/Views/Authorization/AuthorizationPage.xaml
+++ b/CompanyNews/Views/Authorization/AuthorizationPage.xaml
@@ -26,9 +26,9 @@ From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
     <Grid Background="AliceBlue" DataContext="{StaticResource AuthorizationViewModel}">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="20*"/>
+            <RowDefinition Height="50*"/>
+            <RowDefinition Height="30*"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -43,13 +43,13 @@ From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
                FontWeight="DemiBold" FontSize="18"/>
         </Grid>
 
-        <Grid Grid.Row="0" Grid.RowSpan="3" VerticalAlignment="Center" Margin="0,0,0,80">
+        <Grid Grid.Row="1" Margin="0,70,0,0">
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
             <!--авторизация или регистрация-->
@@ -90,7 +90,7 @@ From="#de6d6d" To="Transparent" Duration="0:0:3" AutoReverse="False"/>
 
         </Grid>
 
-        <Grid Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,10">
+        <Grid Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,50">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
